@@ -1,3 +1,10 @@
+Thu Jun 12 17:42:47 UTC 2008  Steve Huston  <shuston@riverace.com>
+
+        * bin/PerlACE/Process.pm:
+        * bin/PerlACE/Process_Win32.pm: Moved the Target sub from Process_Win32
+          to Process so everybody can see it. Thanks to Chad Elliott for
+          finding and suggesting the correction for it.
+
 Thu Jun 12 16:04:33 UTC 2008  Steve Huston  <shuston@riverace.com>
 
         * bin/tao_orb_tests.lst: Disabled newly added tests on LabVIEW_RT.
